# personal_networking

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8dc7dd5600f3_baseline_schema.py  e8821371d1f5_add_uq_contact_links_pair_type.py
docs/: AGENTS.md  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  KEYCLOAK_SETUP.md
personal_network/: manage.py
personal_network/personal_network/: asgi.py  settings.py  urls.py  wsgi.py
sources/: main.py  settings.py
sources/agents/: concierge_agent.py  mcp_app.py  mcp_server.py  prepare_meeting_agent.py
sources/agents/tools/: contacts_tools.py
sources/api/: fastapi_app.py
sources/api/auth/: deps.py  keycloak_admin.py  keycloak_module.py
sources/api/data_base/: base.py  models.py
sources/api/routers/v1/: admin_users.py  agents.py  auth.py  contact_interactions.py  contact_links.py  contacts.py  promises.py  search.py
sources/api/schemas/: admin_users.py  agents.py  auth.py  contacts.py  search.py
sources/api/services/: auth_service.py  contacts_service.py  interactions_service.py  links_service.py  search_service.py  user_registration_service.py
sources/utils/: db_bootstrap.py  logger_loguru.py  search_bootstrap.py  token_inspect.py
sources/web/: contact.html  contacts.html  error.html  index.html  login.html  success.html
sources/web/assets/css/: styles.css
sources/web/assets/js/: auth.js  contact.js  contacts.js  main.js  strip-token-from-url.js  ui.js
tests/: conftest.py  test_auth.py  test_concierge_agent.py  test_contacts.py  test_interactions.py  test_links.py  test_promises.py  test_search.py
