[tool.poetry]
name = "personal-networking"
version = "0.1.0"
description = ""
authors = ["Dmitrii Sychev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
django = "^5.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"